--- a/index.html
+++ b/index.html
@@ -598,8 +598,7 @@
         <div class="footer-section">
           <h3 class="footer-title">Lorence Palisan</h3>
           <p class="footer-description">
-            Professional website development services focused on security,
-            SEO, and user experience.
+            Building clean, modern, and secure websites with user-friendly experiences.
           </p>
         </div>
         <div class="footer-section">
