Update the recent project section

--- a/index.html
+++ b/index.html
@@ -199,28 +199,31 @@
         </p>
       </div>
       <div class="portfolio-grid">
+
+
         <div class="portfolio-item">
           <div class="portfolio-image">
             <div class="portfolio-overlay">
               <div class="portfolio-links">
-                <a href="#" class="portfolio-link"><i class="fas fa-external-link-alt"></i></a>
-                <a href="#" class="portfolio-link"><i class="fas fa-github"></i></a>
+                <a href="Incident-report-page.html" target="_blank" class="portfolio-link"><i
+                    class="fas fa-external-link-alt"></i></a>
+                <a href="#" class="portfolio-link"><i class="fas fa-shield-alt"></i></a>
               </div>
             </div>
             <div class="portfolio-placeholder">
-              <i class="fas fa-laptop-code"></i>
+              <i class="fas fa-shield-alt"></i>
             </div>
           </div>
           <div class="portfolio-content">
-            <h3 class="portfolio-title">E-commerce Security Overhaul</h3>
+            <h3 class="portfolio-title">WordPress Security Recovery</h3>
             <p class="portfolio-description">
-              Complete security audit and malware removal for an online store,
-              improving load times by 60% and restoring customer trust.
+              Complete security incident response for compromised WordPress site with 167k+ fake users, SEO spam, and
+              malware cleanup.
             </p>
             <div class="portfolio-tags">
               <span class="tag">Security</span>
-              <span class="tag">Performance</span>
-              <span class="tag">E-commerce</span>
+              <span class="tag">Incident Response</span>
+              <span class="tag">Malware Removal</span>
             </div>
           </div>
         </div>
@@ -228,24 +231,25 @@
           <div class="portfolio-image">
             <div class="portfolio-overlay">
               <div class="portfolio-links">
-                <a href="#" class="portfolio-link"><i class="fas fa-external-link-alt"></i></a>
-                <a href="#" class="portfolio-link"><i class="fas fa-github"></i></a>
+                <a href="monthly-maintenance-page.html" target="_blank" class="portfolio-link"><i
+                    class="fas fa-external-link-alt"></i></a>
+                <a href="#" class="portfolio-link"><i class="fas fa-tools"></i></a>
               </div>
             </div>
             <div class="portfolio-placeholder">
-              <i class="fas fa-search"></i>
+              <i class="fas fa-tools"></i>
             </div>
           </div>
           <div class="portfolio-content">
-            <h3 class="portfolio-title">SEO Optimization Project</h3>
+            <h3 class="portfolio-title">Monthly Website Maintenance</h3>
             <p class="portfolio-description">
-              Technical SEO improvements resulting in 200% increase in organic
-              traffic and top 10 rankings for target keywords.
+              Ongoing monthly maintenance and optimization for AyalaLand Logistics and affiliated websites including
+              performance monitoring and content updates.
             </p>
             <div class="portfolio-tags">
+              <span class="tag">Maintenance</span>
+              <span class="tag">Performance</span>
               <span class="tag">SEO</span>
-              <span class="tag">Analytics</span>
-              <span class="tag">Traffic</span>
             </div>
           </div>
         </div>
@@ -253,24 +257,25 @@
           <div class="portfolio-image">
             <div class="portfolio-overlay">
               <div class="portfolio-links">
-                <a href="#" class="portfolio-link"><i class="fas fa-external-link-alt"></i></a>
-                <a href="#" class="portfolio-link"><i class="fas fa-github"></i></a>
+                <a href="https://lorencep22.github.io/sample_site1/" target="_blank" class="portfolio-link"><i
+                    class="fas fa-external-link-alt"></i></a>
+                <a href="#" class="portfolio-link"><i class="fab fa-react"></i></a>
               </div>
             </div>
             <div class="portfolio-placeholder">
-              <i class="fas fa-broom"></i>
+              <i class="fab fa-react"></i>
             </div>
           </div>
           <div class="portfolio-content">
-            <h3 class="portfolio-title">Ad Removal & Cleanup</h3>
+            <h3 class="portfolio-title">React Sample Site</h3>
             <p class="portfolio-description">
-              Removed malicious ad injections and restored website
-              functionality, improving user experience and page load speeds.
+              Modern responsive website built with React, Vite, and Tailwind CSS featuring clean design and smooth
+              animations.
             </p>
             <div class="portfolio-tags">
-              <span class="tag">Cleanup</span>
-              <span class="tag">Performance</span>
-              <span class="tag">UX</span>
+              <span class="tag">React</span>
+              <span class="tag">Vite</span>
+              <span class="tag">Tailwind CSS</span>
             </div>
           </div>
         </div>
@@ -298,42 +303,6 @@
             great
             websites but also keep them secure, up-to-date, and running at their best.
           </p>
-
-          <!-- <div class="skills">
-            <h3 class="skills-title">Technical Skills</h3>
-            <div class="skills-grid">
-              <div class="skill-item">
-                <span class="skill-name">WordPress</span>
-                <div class="skill-bar">
-                  <div class="skill-progress" style="width: 95%"></div>
-                </div>
-              </div>
-              <div class="skill-item">
-                <span class="skill-name">HTML/CSS</span>
-                <div class="skill-bar">
-                  <div class="skill-progress" style="width: 95%"></div>
-                </div>
-              </div>
-              <div class="skill-item">
-                <span class="skill-name">JavaScript</span>
-                <div class="skill-bar">
-                  <div class="skill-progress" style="width: 90%"></div>
-                </div>
-              </div>
-              <div class="skill-item">
-                <span class="skill-name">SEO</span>
-                <div class="skill-bar">
-                  <div class="skill-progress" style="width: 85%"></div>
-                </div>
-              </div>
-              <div class="skill-item">
-                <span class="skill-name">Security</span>
-                <div class="skill-bar">
-                  <div class="skill-progress" style="width: 88%"></div>
-                </div>
-              </div>
-            </div>
-          </div> -->
 
 
 
@@ -518,6 +487,12 @@
                   <div class="skill-progress" style="width: 85%"></div>
                 </div>
               </div>
+              <div class="skill-item">
+                <span class="skill-name">Yoast SEO</span>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 85%"></div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -614,10 +589,12 @@
         <div class="footer-section">
           <h3 class="footer-title">Connect</h3>
           <div class="social-links">
-            <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-            <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/lorencep22" target="_blank" class="social-link"><i
+                class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/lorencepalisan/" target="_blank" class="social-link"><i
+                class="fab fa-linkedin"></i></a>
+            <a href="https://x.com/LorencePal80773" target="_blank" class="social-link"><i
+                class="fab fa-twitter"></i></a>
           </div>
         </div>
       </div>
