--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
             <span class="code-string">'SEO Basics'</span>],
           </div> -->
           <div class="code-line indent">
-            lookingFor: <span class="code-string">'Challenging freelance or remote opportunities'</span>
+            lookingFor: <sp
+            
+            an class="code-string">'Challenging freelance or remote opportunities'</span>
           </div>
           <div class="code-line">};</div>
         </div>
@@ -231,7 +233,7 @@
           <div class="portfolio-image">
             <div class="portfolio-overlay">
               <div class="portfolio-links">
-                <a href="monthly-maintenance-page.html" target="_blank" class="portfolio-link"><i
+                <a href="incident-report-page.html" target="_blank" class="portfolio-link"><i
                     class="fas fa-external-link-alt"></i></a>
                 <a href="#" class="portfolio-link"><i class="fas fa-tools"></i></a>
               </div>
