--- a/Incident-report-page.html
+++ b/Incident-report-page.html
@@ -1,104 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Monthly Website Maintenance & Optimization</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            background-color: #f9f9f9;
-            color: #222;
-        }
+      body {
+        font-family: "Inter", sans-serif;
+        margin: 0;
+        padding: 0;
+        line-height: 1.6;
+        background-color: #f9f9f9;
+        color: #222;
+      }
 
-        .container {
-            max-width: 960px;
-            margin: 0 auto;
-            padding: 40px 20px;
-        }
+      .container {
+        max-width: 960px;
+        margin: 0 auto;
+        padding: 40px 20px;
+      }
 
-        h1,
-        h2,
-        h3 {
-            color: #1DCD9F;
-        }
+      h1,
+      h2,
+      h3 {
+        color: #1dcd9f;
+      }
 
-        .section {
-            margin-bottom: 40px;
-        }
+      .section {
+        margin-bottom: 40px;
+      }
 
-        ul {
-            padding-left: 20px;
-        }
+      ul {
+        padding-left: 20px;
+      }
 
-        footer {
-            text-align: center;
-            padding: 40px 20px;
-            background: #222;
-            color: #fff;
-        }
+      footer {
+        text-align: center;
+        padding: 40px 20px;
+        background: #222;
+        color: #fff;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <h1>Monthly Website Maintenance & Optimization</h1>
-        <h2>Ongoing Support for AyalaLand Logistics & Affiliates</h2>
+      <h1>Monthly Website Maintenance & Optimization</h1>
+      <h2>Ongoing Support for AyalaLand Logistics & Affiliates</h2>
 
-        <div class="section">
-            <h3>Overview</h3>
-            <p>
-                Responsible for continuous monthly website maintenance, performance monitoring, and content updates for
-                AyalaLand Logistics and affiliated websites (Technopark, ALogis, and Artico).
-            </p>
-        </div>
+      <div class="section">
+        <h3>Overview</h3>
+        <p>
+          Responsible for continuous monthly website maintenance, performance
+          monitoring, and content updates for AyalaLand Logistics and affiliated
+          websites (Technopark, ALogis, and Artico).
+        </p>
+      </div>
 
-        <div class="section">
-            <h3>Scope of Work</h3>
-            <ul>
-                <li>Monthly performance and speed audits using PageSpeed Insights and GTmetrix</li>
-                <li>WordPress core/plugin/theme updates and regular security scans</li>
-                <li>Cache management and image optimization for performance</li>
-                <li>SEO and metadata updates for search visibility</li>
-                <li>Uptime monitoring and reporting</li>
-                <li>Content updates across multiple websites for announcements, services, and news</li>
-            </ul>
-        </div>
+      <div class="section">
+        <h3>Scope of Work</h3>
+        <ul>
+          <li>
+            Monthly performance and speed audits using PageSpeed Insights and
+            GTmetrix
+          </li>
+          <li>
+            WordPress core/plugin/theme updates and regular security scans
+          </li>
+          <li>Cache management and image optimization for performance</li>
+          <li>SEO and metadata updates for search visibility</li>
+          <li>Uptime monitoring and reporting</li>
+          <li>
+            Content updates across multiple websites for announcements,
+            services, and news
+          </li>
+        </ul>
+      </div>
 
-        <div class="section">
-            <h3>Impact</h3>
-            <p>
-                Helped improve page load speed across all affiliated sites, ensured up-to-date content, maintained
-                search rankings, and reduced the risk of downtime and security threats.
-            </p>
-        </div>
+      <div class="section">
+        <h3>Impact</h3>
+        <p>
+          Helped improve page load speed across all affiliated sites, ensured
+          up-to-date content, maintained search rankings, and reduced the risk
+          of downtime and security threats.
+        </p>
+      </div>
 
-        <div class="section">
-            <h3>Tools & Technologies Used</h3>
-            <ul>
-                <li>WordPress CMS</li>
-                <li>PageSpeed Insights, GTmetrix</li>
-                <li>Cloudflare CDN & Security</li>
-                <li>Yoast SEO plugin</li>
-                <li>UpdraftPlus for backups</li>
-                <li>WP-Optimize for caching and cleanup</li>
-            </ul>
-        </div>
+      <div class="section">
+        <h3>Tools & Technologies Used</h3>
+        <ul>
+          <li>WordPress CMS</li>
+          <li>PageSpeed Insights, GTmetrix</li>
+          <li>Cloudflare CDN & Security</li>
+          <li>Yoast SEO plugin</li>
+          <li>UpdraftPlus for backups</li>
+          <li>WP-Optimize for caching and cleanup</li>
+        </ul>
+      </div>
 
-        <div class="section">
-            <h3>Handled By</h3>
-            <p><strong>Lorence Palisan</strong><br />WordPress Developer & Maintenance Specialist</p>
-        </div>
+      <div class="section">
+        <h3>Handled By</h3>
+        <p>
+          <strong>Lorence Palisan</strong><br />WordPress Developer &
+          Maintenance Specialist
+        </p>
+      </div>
     </div>
 
-    <footer>
-        &copy; 2025 Lorence Palisan. All rights reserved.
-    </footer>
-</body>
-
+    <footer>&copy; 2025 Lorence Palisan. All rights reserved.</footer>
+  </body>
 </html>
